# aoc

./: .gitignore  README.md
.devcontainer/: devcontainer.json
2023/aoc_ocaml/: .ocamlformat  aoc_ocaml.opam  dune-project
2023/aoc_ocaml/lib/: AOC.ml  dune  files.ml  utf8.ml
2024/aoc_ex/: .gitignore  mix.exs
2024/aoc_ex/lib/: aoc_ex.ex  input.ex
2024/aoc_ex/lib/mix/tasks/: aoc.ex
2024/aoc_ex/lib/solutions/: day_01.ex  day_02.ex  day_03.ex  day_04.ex  day_05.ex  day_06.ex  day_07.ex
2024/aoc_ocaml/: aoc_ocaml.opam  dune-project
2024/aoc_ocaml/lib/: AOC.ml  dune
aoc-2022/input/: day_15.in
aoc-go/2021/: day_02.go  day_03.go  day_04.go  day_06.go  day_08.go  main.go
aoc-go/2022/: day_01_test.go  day_02_test.go  day_06_test.go  day_07.go  day_08_test.go  day_09.go  day_10_test.go  day_11.go  day_11_test.go  day_12.go  day_12_test.go  day_13.go  day_13_test.go  day_16.go  day_16_test.go  day_17.go  day_17_test.go  day_18_test.go  main.go  stack.go  tree.go
aoc-rust/src/2021/: day_02.rs  day_03.rs  day_04.rs  day_05.rs  day_06.rs
