(lang dune 3.12)

(name aoc_ocaml)

(generate_opam_files true)

(source
 (github username/reponame))

(authors "brian mayo")

(maintainers "brian mayo")

(license MIT)

(documentation https://url/to/documentation)

(package
 (name aoc_ocaml)
 (synopsis "advent of code")
 (depends ocaml dune core fmt cohttp-lwt-unix (domainslib (>= 0.5.1))))

; See the complete stanza docs at https://dune.readthedocs.io/en/stable/dune-files.html#dune-project
